--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "start-server": "tsc && node build/server.js",
     "start": "nodemon -e ts -w ./ -x npm run start-server",
     "kill": "kill $(lsof -t -i:3000)",
-    "reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npm run migrate && npm run seed",
-    "remigrate": "npx sequelize-cli db:migrate:undo:all && npm run migrate && npm run seed",
-    "migrate": "npx sequelize-cli db:migrate",
-    "seed": "npx sequelize-cli db:seed:all"
+    "reset": "sequelize db:drop && sequelize db:create && npm run migrate && npm run seed",
+    "remigrate": "sequelize db:migrate:undo:all && npm run migrate && npm run seed",
+    "migrate": "sequelize db:migrate",
+    "seed": "sequelize db:seed:all"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
