--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "letsrateit-db",
-  "version": "0.0.1",
+  "name": "menu-api",
+  "version": "1.0.0",
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start-server": "tsc",
+    "start-server": "tsc && node build/server.js",
     "start": "nodemon -e ts -w ./ -x npm run start-server",
     "kill": "kill $(lsof -t -i:3000)",
     "reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npm run migrate && npm run seed",
@@ -16,15 +16,30 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5",
-    "uuid": "^8.3.2"
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/moment": "^2.13.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.3.3",
-    "@types/sequelize": "^4.28.10"
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/sequelize": "^4.28.10",
+    "@types/validator": "^13.6.3"
   }
 }
