--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "menu-api",
+  "name": "simple-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
@@ -16,30 +16,29 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "http": "0.0.1-security",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
-    "passport": "^0.4.1",
+    "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.6.0",
+    "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.16.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.4",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/moment": "^2.13.0",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^16.3.3",
+    "@types/node": "^17.0.18",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
-    "@types/sequelize": "^4.28.10",
-    "@types/validator": "^13.6.3"
+    "@types/validator": "^13.7.1"
   }
 }
